syntax = "proto3";

package rawproxy;

service proxy {

    rpc Get (GetRequest) returns (GetResponse) {}
    rpc Put (PutRequest) returns (PutResponse) {}
    rpc Delete (DeleteRequest) returns (DeleteResponse) {}
    rpc Scan (ScanRequest) returns (ScanResponse) {}
}
enum ResponseStatus{
    kNoType = 0;
    kSuccess = 1;
    kFailed = 2;
}

message GetRequest {
    bytes key = 1;
}
message GetResponse {
    ResponseStatus status = 1;
    string err = 2;
    bytes value = 3;
}

message PutRequest {
    bytes key = 1;
    bytes value = 2;
}

message PutResponse {
    ResponseStatus status = 1;
    string err = 2;
}

message DeleteRequest {
    bytes key = 1;
}
message DeleteResponse {
    ResponseStatus status = 1;
    string err = 2;
}

message ScanRequest {
    bytes key_start = 1;   // key_start <= key < key_end
    bytes key_end = 2;
    uint32 limit = 3;
}

message KvPair {
    bytes key = 1;
    bytes value = 2;
}

message ScanResponse {
    ResponseStatus status = 1;
    string err = 2;
    repeated KvPair pair = 3;
}
